--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,13 @@
 		    <version>2.0.1.Final</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/javax.servlet/jstl -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>jstl</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
