--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,21 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/votingsystem
-spring.datasource.username=springuser
-spring.datasource.password=password
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/votingsystem
+#spring.datasource.username=springuser
+#spring.datasource.password=password
+#
+#spring.datasource.platform=mysql
 
-spring.datasource.platform=mysql
+# Set here configurations for the database connection
+spring.datasource.url=jdbc:postgresql://localhost:5432/votingsystem
+spring.datasource.username=springuser
+spring.datasource.password=springuser@123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+
+# Allows Hibernate to generate SQL optimized for a particular DBMS
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
